--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "Node",
     "javascript",
     "FreeCodeCamp",
-    "MongoDB"
+    "MongoDB",
+    "Mongoose"
   ],
   "scripts": {
     "start": "node server.js"
@@ -22,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^1.2.0",
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "mongoose": "^4.1.0"
   }
 }
