--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest --testMatch **/__tests__/**/*.test.js",
+    "test": "NODE_ENV=development jest",
     "format": "yarn prettier \"{src,config}/**/*.{js,ts,tsx,json}\" --write",
     "lint": "eslint 'src/**/*.{js,ts}'"
   },
@@ -38,7 +38,7 @@
   },
   "jest": {
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.(test|integration|spec).(ts|js)?(x)",
+      "<rootDir>/src/**/*.(test|integration|spec).(ts|js)?(x)",
       "<rootDir>/src/**/?(*.)(spec|test).(ts|js)?(x)"
     ],
     "moduleFileExtensions": [
@@ -50,7 +50,8 @@
     ],
     "coverageReporters": [
       "lcov"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "lint-staged": {
     "./{src,config}/**/*.{js,ts,tsx,json}": [
